Updated with alignment issue

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -203,6 +203,10 @@
 		padding: 6em 0em;
 	}
 
+  #banneraboutus
+  {
+      padding: 6em 0em;
+  }
 
 /*********************************************************************************/
 /* Main                                                                          */
